# gFaaS

./: .gitignore  README.md
figures/: Deployment.drawio  abstraction_areas.drawio  abstraction_level.drawio  adapt_code_decision.drawio  adapt_code_decision_2.drawio  container-service.drawio  cppless_workflow.drawio  deployment-flow.drawio  faas-service-uml.drawio  fission_architecture.drawio  fission_function_deployment.drawio  fission_java_model.drawio  function_workflow.drawio  gfaas-cli.drawio  gfaas-function-code.drawio  gfaas_build.drawio  knative-security-2.drawio  knative-security.drawio  nuclio_architecture.drawio  nuclio_java_model.drawio  openfaas_architecture.drawio  openfaas_function_deployment.drawio  openfaas_java_model.drawio  scaling.drawio  spring_adapter_architecture.drawio  spring_cloud_functions_adapter.drawio  test-workflow.drawio
gfaas-cli/: Dockerfile  README.md  build-executables.sh  package-lock.json  package.json  tsconfig.json
gfaas-cli/resources/: cpp-functions.csv  function.yml  go-functions.csv  java-functions.csv  node-functions.csv  platform_settings.yml  python-functions.csv
gfaas-cli/src/: index.ts
infrastructure/cluster_setup/: .terraform.lock.hcl  README.md  clouds.yaml  main.tf  variables.tf
infrastructure/single_node_setup/: README.md  fission.yaml  hosts.yaml  knative.yaml  kubernetes.yaml  nuclio.yaml  openfaas.yaml
performance_testing/gfaas-functions/gfaas-cpp/: CMakeLists.txt  Dockerfile  README.md  cmake_install.cmake  function.yml  main.cpp
performance_testing/gfaas-functions/gfaas-cpp/gfaas-cpp-httplib/: httplib.h
(+391 files in other folders)
